--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
 <html>
 <body>
 <div>
 	<ul>
 		<li>bricks</li>
 		<li>mortar</li>
-
+		<li>quickcrete</li>
+		<li>stuff</li>
 	</ul>
 
 </div>
